editors/tree-sitter-noeta/grammar.js
    source_file: $ => seq(optional($.shebang), repeat($._item)),

    // A leading `#!…` interpreter line (PHP-style executable scripts). Only valid as the file's
    // first token — the lexer never produces it elsewhere (a mid-file `#!` is a `#` then an error,
    // matching the compiler). Distinct from an `#[attribute]` (which is `#` then `[`).
    shebang: _ => token(seq('#!', /[^\n]*/)),

    // A statement/member terminator: an explicit `;` or a scanner-emitted newline.
    _terminator: $ => choice(';', $._newline),

    _item: $ => choice(
      $._declaration,
      $._statement,
    ),

    // ---------------------------------------------------------------- comments
    // `block_comment` is produced by the external scanner (src/scanner.c) so it can nest.
    _declaration: $ => choice(
      $.use_declaration,
      $.function_declaration,
      $.struct_declaration,
      $.class_declaration,
      $.enum_declaration,
      $.impl_block,
      $.namespace_declaration,
      $.text_tier_block,
      $.decorator,
      $.attributed_declaration,
    ),

    use_declaration: $ => seq(
      'use',
      $._use_path,
      optional($._terminator),
    ),
    _use_path: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional(seq('.', '{', commaSep1($.identifier), '}')),
    ),

    text_tier_block: $ => seq(
      '@',
      field('name', alias('doc', $.identifier)),
      field('body', $.text_block),
    ),
    text_block: $ => seq('{', optional($.text_body), '}'),

    // Covers both the fixed decorator directives (@derive/@role/@semantic/@attribute/@packed)
    // and the open tier set (@test/@bench/@debug/...). The distinction is name-based and
    // semantic, not syntactic, so one rule serves both — including the `@test fn` / `@fuzz {...}`
    // annotation and block forms. (`@doc` is carved out above as the text-tier form.)
    decorator: $ => prec.right(seq(
      '@',
      field('name', $.identifier),
      optional(seq('(', optional(commaSep($._decorator_arg)), ')')),
      optional(choice($._declaration, $.block)),
    )),
    _decorator_arg: $ => choice(
      seq(field('key', $.identifier), ':', $._expression),
      // A type argument, e.g. `@derive(Serialize<Json>)` — matched before the plain expression so
      // the `<…>` is read as generic arguments, not a comparison.
      $.generic_type,
      $._expression,
    ),

    function_declaration: $ => seq(
      optional('pub'),
      optional('async'),
      'fn',
      $._function_rest,
    ),
    _function_rest: $ => seq(
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq(':', field('return_type', $._type))),
      field('body', $.block),
    ),

    parameters: $ => seq('(', optional(commaSep($.parameter)), ')'),
    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    struct_declaration: $ => seq(optional('pub'), 'struct', $._type_body_decl),
    _type_body_decl: $ => seq(
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq(':', field('backing', $._type))),
      field('body', $.type_body),
    ),

    type_body: $ => seq(
      '{',
      repeat($._type_member),
      '}',
    ),
    _type_member: $ => choice(
      $.field_declaration,
      $.enum_variant,
      $.function_declaration,
      $.destructor,
      $.impl_block,
      $.decorator,
      $.attributed_declaration,
    ),

    field_declaration: $ => prec.right(seq(
      optional('pub'),
      optional('mut'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
      optional($._terminator),
    )),

    impl_block: $ => seq(
      'impl',
      field('trait', $.identifier),
      optional(seq('for', field('type', $._type))),
      '{',
      repeat($.function_declaration),
      '}',
    ),

    let_statement: $ => seq(
      'mut',
      field('name', choice($.identifier, $.tuple_pattern)),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      optional($._terminator),
    ),

    // A typed immutable binding: `x: T = value` (no `mut`).
    echo_statement: $ => seq('echo', $._expression, optional($._terminator)),
    return_statement: $ => prec.right(seq('return', optional($._expression), optional($._terminator))),
    assignment_statement: $ => seq(
      field('left', $._assignable),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '~=', '??=')),
      field('right', $._expression),
      optional($._terminator),
    ),
    _assignable: $ => choice(
      $.identifier,
      $.field_expression,
      $.index_expression,
      $.tuple_pattern,
    ),

    expression_statement: $ => prec(-1, seq($._expression, optional($._terminator))),

    block: $ => seq('{', repeat($._item), '}'),

    // ------------------------------------------------------------- expressions
    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self,
      $.turbofish_call,
      $.field_expression,
      $.index_expression,
      $.call_expression,
      $.method_call_expression,
      $.narrow_expression,
      $.unary_expression,
      $.binary_expression,
      $.as_expression,
      $.is_expression,
      $.closure_expression,
      $.match_expression,
      $.if_expression,
      $.await_expression,
      $.try_expression,
      $.spawn_expression,
      $.isolate_expression,
      $.concurrent_expression,
      $.struct_literal,
      $.list_literal,
      $.map_literal,
      $.set_literal,
      $.tuple_expression,
      $.spread_expression,
      $._parenthesized_expression,
    ),

    self: _ => 'self',

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Turbofish call: reflection intrinsics and typed generics — `attributes_of::<Route>()`,
    // `from_bytes::<T>(bytes)`, `type_of::<T>()`.
    method_call_expression: $ => prec(PREC.call + 1, seq(
      field('object', $._expression),
      '.',
      field('method', $.identifier),
      optional(seq('::', '<', commaSep1($._type), '>')),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq('(', optional(commaSep($._argument)), ')'),
    _argument: $ => choice(
      seq(field('name', $.identifier), ':', $._expression),
      $._expression,
    ),

    binary_expression: $ => binaryTable($._expression),

    closure_expression: $ => seq(
      'fn',
      field('parameters', $.parameters),
      optional(seq(':', field('return_type', $._type))),
      choice(
        seq('=>', field('body', $._expression)),
        field('body', $.block),
      ),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      optional(commaSep($.match_arm)),
      optional(','),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      '=>',
      field('value', $._expression),
    ),

    struct_literal: $ => prec.dynamic(1, seq(
      field('type', $.identifier),
      '{',
      optional(commaSep($._struct_field_init)),
      optional(','),
      '}',
    )),
    _struct_field_init: $ => choice(
      $.spread_expression,
      seq(field('field', $.identifier), ':', $._expression),
      field('field', $.identifier),
    ),

    list_literal: $ => seq('[', optional(commaSep($._expression)), optional(','), ']'),

    _pattern: $ => choice(
      $.identifier,
      $.self,
      $._literal,
      $.enum_pattern,
      $.tuple_pattern,
      $.type_pattern,
      $.wildcard_pattern,
    ),
    // A type-test match arm: `is int => …`, `is List<int> => …` (union / dyn narrowing).
    enum_pattern: $ => prec(1, choice(
      // Qualified: `Type.Variant`, `Type.Variant(binds)` (variant is PascalCase or lowercase).
      seq(
        field('type', $.identifier),
        '.',
        field('variant', choice($.identifier, $.identifier)),
        optional($._variant_args),
      ),
      // Unqualified variant carrying bindings: `some(n)`, `Circle(r)` — the args disambiguate it
      // from a bare identifier binding.
      seq(field('variant', choice($.identifier, $.identifier)), $._variant_args),
    )),
    _variant_args: $ => seq('(', commaSep($._pattern), ')'),
    wildcard_pattern: _ => '_',

    // ------------------------------------------------------------------- types
    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.optional_type,
      $.union_type,
      $.tuple_type,
      $.function_type,
      $.identifier,
    ),
    primitive_type: _ => choice(
      'int', 'float', 'f32', 'bool', 'string', 'bytes', 'void', 'unit', 'dyn',
      'i8', 'i16', 'i32', 'i64', 'u8', 'u16', 'u32', 'u64',
    ),
    integer_literal: _ => token(choice(
      /[0-9][0-9_]*((i|u)(8|16|32|64))?/,
      /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*((i|u)(8|16|32|64))?/,
      /0[oO][0-7][0-7_]*((i|u)(8|16|32|64))?/,
      /0[bB][01][01_]*((i|u)(8|16|32|64))?/,
    )),
    float_literal: _ => token(choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?(f32)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*(f32)?/,
      /[0-9][0-9_]*f32/,
    )),
    boolean_literal: _ => choice('true', 'false'),

    string_literal: $ => choice(
      seq('"', repeat(choice($._string_content_dq, $.escape_sequence, $.interpolation)), '"'),
      seq("'", repeat(choice($._string_content_sq, $.escape_sequence, $.interpolation)), "'"),
      seq('`', repeat(choice($._string_content_bt, $.escape_sequence, $.interpolation)), '`'),
    ),
    _string_content_dq: _ => token.immediate(prec(1, /[^"\\$]+|\$[^{]/)),
    _string_content_sq: _ => token.immediate(prec(1, /[^'\\$]+|\$[^{]/)),
    _string_content_bt: _ => token.immediate(prec(1, /[^`\\$]+|\$[^{]/)),
    interpolation: $ => seq('${', $._expression, '}'),

    // ------------------------------------------------------------- identifiers
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});

// The binary-operator precedence table, parameterized by the operand rule so the full expression
// and the restricted control-flow-head expression share one definition.
function binaryTable(operand) {
  const table = [
    [PREC.pipe, '|>'],
    [PREC.coalesce, '??'],
    [PREC.or, '||'],
    [PREC.and, '&&'],
    [PREC.compare, choice('==', '!=', '<', '<=', '>', '>=', '===', '!==')],
    [PREC.bit_or, '|'],
    [PREC.bit_xor, '^'],
    [PREC.bit_and, '&'],
    [PREC.shift, choice('<<', '>>')],
    [PREC.range, choice('..', '..=')],
    [PREC.add, choice('+', '-', '~')],
    [PREC.mul, choice('*', '/', '%')],
  ];
  return choice(...table.map(([p, op]) => prec.left(p, seq(
    field('left', operand),
    field('operator', op),
    field('right', operand),
  ))));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
