editors/tree-sitter-noeta/test/corpus/basics.txt
==================
Binding with arithmetic
==================

mut x = 1 + 2

---

(source_file
  (let_statement
    name: (identifier)
    value: (binary_expression
      left: (integer_literal)
      right: (integer_literal))))

==================
Echo a function call
==================

echo len(xs)

---

(source_file
  (echo_statement
    (call_expression
      function: (identifier)
      arguments: (arguments
        (identifier)))))

==================
Struct with a typed field
==================

struct Point {
    x: int
}

---

(source_file
  (struct_declaration
    name: (identifier)
    body: (type_body
      (field_declaration
        name: (identifier)
        type: (primitive_type)))))

==================
Match over an enum
==================

fn area(): float {
    return match self {
        Shape.Circle(r) => 1.0,
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    body: (block
      (return_statement
        (match_expression
          value: (self)
          (match_arm
            pattern: (enum_pattern
              type: (identifier)
              variant: (identifier)
              (identifier))
            value: (float_literal)))))))

==================
Newline terminates; leading operator continues
==================

mut a = [1, 2, 3]
    |> sum()
mut b = 2

---

(source_file
  (let_statement
    name: (identifier)
    value: (binary_expression
      left: (list_literal
        (integer_literal)
        (integer_literal)
        (integer_literal))
      right: (call_expression
        function: (identifier)
        arguments: (arguments))))
  (let_statement
    name: (identifier)
    value: (integer_literal)))

==================
Doc text tier: body is verbatim prose
==================

@doc {
  # Adder

  `add(a, b)` returns **a + b**; "quotes" and a balanced {snippet} are prose.
}
fn add(a: int, b: int): int { return a + b }

---

(source_file
  (text_tier_block
    name: (identifier)
    body: (text_block
      (text_body)))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

==================
Doc text tier: escaped braces are not counted
==================

@doc {
  a literal \} closer and a literal \{ opener, plus \\ a backslash
}
mut x = 1

---

(source_file
  (text_tier_block
    name: (identifier)
    body: (text_block
      (text_body)))
  (let_statement
    name: (identifier)
    value: (integer_literal)))

==================
A code tier block still parses as code
==================

@test {
    fn t(): void { assert(true) }
}

---

(source_file
  (decorator
    name: (identifier)
    (block
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        return_type: (primitive_type)
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              arguments: (arguments
                (boolean_literal)))))))))

==================
Static fallback: an undeclared custom tier is NOT verbatim
==================

@spec {
  hello
}

---

(source_file
  (decorator
    name: (identifier)
    (block
      (expression_statement
        (identifier)))))

==================
Leading shebang line
==================

#!/usr/bin/env noeta
echo 1

---

(source_file
  (shebang)
  (echo_statement
    (integer_literal)))

================================================================================
Trait declaration
================================================================================

trait Greeter {
    fn greet(who: string): string
    fn label(): string { return "g" }
}

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    name: (identifier)
    body: (trait_body
      (trait_method
        name: (identifier)
        parameters: (parameters
          (parameter
            name: (identifier)
            type: (primitive_type)))
        return_type: (primitive_type))
      (trait_method
        name: (identifier)
        parameters: (parameters)
        return_type: (primitive_type)
        body: (block
          (return_statement
            (string_literal)))))))

================================================================================
Dyn trait type
================================================================================

fn welcome(g: dyn Greeter): string {
    return g.greet()
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (trait_object_type
          trait: (identifier))))
    return_type: (primitive_type)
    body: (block
      (return_statement
        (method_call_expression
          object: (identifier)
          method: (identifier)
          arguments: (arguments))))))

==================
Qualified heads: struct literal and enum pattern
==================

a = vec.Vec2 { x: 1, y: 2 }
r = match s {
  geometry.vec.Shape.Circle(radius) => radius,
  _ => 0,
}

---

(source_file
  (assignment_statement
    (identifier)
    (struct_literal
      (qualified_identifier
        (identifier)
        (identifier))
      (identifier)
      (integer_literal)
      (identifier)
      (integer_literal)))
  (assignment_statement
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (enum_pattern
          (qualified_identifier
            (identifier)
            (identifier)
            (identifier))
          (identifier)
          (identifier))
        (identifier))
      (match_arm
        (wildcard_pattern)
        (integer_literal)))))

================================================================================
Call-site class instantiation
================================================================================

r = Repo::<Todo>.new("todos")
p = Pair::<int, string>.of(1, "x")
b = Repo::<Todo>.blank::<int>()

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (instantiated_call_expression
      (identifier)
      (identifier)
      (identifier)
      (arguments
        (string_literal))))
  (assignment_statement
    (identifier)
    (instantiated_call_expression
      (identifier)
      (primitive_type)
      (primitive_type)
      (identifier)
      (arguments
        (integer_literal)
        (string_literal))))
  (assignment_statement
    (identifier)
    (instantiated_call_expression
      (identifier)
      (identifier)
      (identifier)
      (primitive_type)
      (arguments))))
